tests/miniJava/neg/004135_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends java System.out.println { }
